updates name for external blobstore page[#154559926]

--- a/cf-backup.html.md.erb
+++ b/cf-backup.html.md.erb
@@ -64,7 +64,7 @@ and by using a later version of `cf-deployment`.
     <td><code>enable-backup-restore-s3.yml</code><br>
     </td>
     <td><code>cf-deployment</code> v1.4.0 or later.<br>
-        For instructions, see <a href="external-blobstores.html">Enabling an External Blobstore</a>.
+        For instructions, see <a href="external-blobstores.html">Backup and Restore with External Blobstores</a>.
      </td>
   </tr>
   <tr>
