fixes formatting issue

--- a/cf-backup.html.md.erb
+++ b/cf-backup.html.md.erb
@@ -7,15 +7,14 @@ This topic describes the configuration you need for your Cloud Foundry deploymen
 
 This topic assumes the use of ops files to customize your Cloud Foundry deployment.
 
-<p class="note warning"><strong>WARNING</strong>: The <code>enable-backup-restore.yml</code>, <code>enable-backup-restore-s3.yml</code>, <code>enable-nfs-broker-backup.yml</code>,
-and <code>enable-backup-restore-credhub.yml</code> ops files are currently experimental and should be used with caution.</p>
+<p class="note warning"><strong>WARNING</strong>: The <code>enable-backup-restore.yml</code>, <code>enable-backup-restore-s3.yml</code>, <code>enable-nfs-broker-backup.yml</code>, and <code>enable-backup-restore-credhub.yml</code> ops files are currently experimental and should be used with caution.</p>
 
 If you do not use ops files for customization, 
 you can still customize your Cloud Foundry to use BBR. 
 Examine the contents of the ops files on this page,
 and use them as a guide to customize your deployment manifest directly.
 
-The repository for the Cloud Foundry deployment is [`cf-deployment`](https://github.com/cloudfoundry/cf-deployment).
+The repository for the Cloud Foundry deployment is [cf-deployment](https://github.com/cloudfoundry/cf-deployment).
 
 <div class="note warning">
   <strong>WARNING</strong>:
