Clarifications in external-blobstores topic [#155130808]

--- a/external-blobstores.html.md.erb
+++ b/external-blobstores.html.md.erb
@@ -64,8 +64,8 @@ This procedure describes how to do this if you are using ops files to customize 
        before <code>enable-backup-restore-s3.yml</code>.
        See <a href="cf-backup.html#order">Apply Ops Files in the Correct Order</a>.</p>
 
-If you do not use ops files for customization,
-you can still customize your Cloud Foundry to use BBR.
+If you do not use [cf-deployment](https://github.com/cloudfoundry/cf-deployment) and ops files, 
+you can still set up your Cloud Foundry deployment to use BBR.
 Examine the contents of the ops file,
 and use it as a guide to customize your deployment manifest directly.
 
