add prominent link to cf-deployment bbr instructions

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -14,6 +14,8 @@ and transfers the backup artifacts to and from the BOSH deployment or BOSH Direc
 
 For more information about installing and using BBR, see the [Installing BOSH Backup and Restore](installing.html), [Backing Up with BOSH Backup and Restore](backup.html), and [Restoring with BOSH Backup and Restore](restore.html) topics. Information for release authors and developers is also available in the [BOSH Backup and Restore Developer's Guide](bbr-devguide.html).
 
+For more information about backing up and restoring cf-deployment with BBR, see [Configuring Cloud Foundry for BOSH Backup and Restore](https://docs.cloudfoundry.org/bbr/cf-backup.html).
+
 ## <a id='supported'></a>Supported Components
 
 BBR is a binary that can back up and restore BOSH deployments and BOSH Directors. BBR requires that the backup targets supply scripts that implement the backup and restore functions.
