--- a/backup.html.md.erb
+++ b/backup.html.md.erb
@@ -103,13 +103,13 @@ Perform the following steps to check that your BOSH Director is reachable and ha
     `DEPLOYMENT-NAME`: The name of the deployment you want to back up.
                        For a list of deployments, run `bosh deployments`.<br><br>
 
-    `PATH-TO-BOSH-CA-CERT`: The path to the BOSH Director’s Certificate Authority (CA) certificate
-                            if the certificate is not verifiable by the local machine’s certificate chain:
+    `PATH-TO-BOSH-CA-CERT`: The path to the BOSH Director's Certificate Authority (CA) certificate
+                            if the certificate is not verifiable by the local machine's certificate chain:
        + If you used [`bbl`](https://github.com/cloudfoundry/bosh-bootloader) spin up your director
        to retrieve the CA cert with `bbl director-ca-cert`.
        + If you manually deployed then it may be stored in a `secrets.yml` or similar.
 
-    For example,
+    For example:
 
     <pre class="terminal">
   $ BOSH_CLIENT_SECRET=p455w0rd \
