--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -5,6 +5,59 @@ owner: Release Engineering
 
 ## <a id='releases'></a> Releases
 
+### <a id='1.1'></a> v1.2.0
+
+**Release Date**: February 22, 2018
+
+#### Features
+* Call lock and unlock scripts in parallel to reduce API downtime. 
+
+#### Bug Fixes
+
+None
+
+#### Known Issues
+
+None
+
+### <a id='1.1'></a> v1.1.6
+
+**Release Date**: February 21, 2018
+
+#### Features
+
+None
+
+#### Security Fix
+
+* Bump to Golang1.10
+
+#### Bug Fixes
+
+None
+
+#### Known Issues
+
+None
+
+
+### <a id='1.1'></a> v1.1.5
+
+**Release Date**: February 8, 2018
+
+#### Features
+* To enable BOSH Addons to work, BBR doesn't fail when the release name for a job cannot be found
+* Move 'keep-alive' warnings to debug mode
+
+#### Bug Fixes
+
+* Fix issue on machines with unusual permissions set on /var/vcap/store
+
+#### Known Issues
+
+None
+
+
 ### <a id='1.1'></a> v1.1.4
 
 **Release Date**: December 13, 2017
