--- a/external-blobstores.html.md.erb
+++ b/external-blobstores.html.md.erb
@@ -20,7 +20,9 @@ and you cannot restore it unless you have a replica.
 For how to restore from a replica, see [Restore from Replicas](#restore-from-replicas) below.
 
 <p class="note warning">
-  <strong>WARNING</strong>: The blobstore-backup-restorer in backup-and-restore-sdk v1.5.1 and earlier does not support the backup and restore of an AWS S3 blobstore with individual blobs greater than 5GB.
+  <strong>WARNING</strong>: The <code>blobstore-backup-restorer</code> in 
+  <a href="https://github.com/cloudfoundry-incubator/backup-and-restore-sdk-release/releases">backup-and-restore-sdk</a> 
+  v1.5.1 and earlier does not support the backup and restore of an AWS S3 blobstore with individual blobs greater than 5GB.
 </p>
 
 ## <a id="enable-versioning"></a> Enable Versioning on Your External Blobstore
