--- a/cf-backup.html.md.erb
+++ b/cf-backup.html.md.erb
@@ -103,7 +103,8 @@ and by using a later version of `cf-deployment`.
 </table>
 
 ### <a id='supported-external-databases'></a>Supported External Databases
-Cloud foundry components use the backup and restore sdk to interface with databases for backup and restore, which supports the following database versions:
+Cloud Foundry components use the backup and restore SDK to interface with databases for backup and restore.
+The backup and restore SDK supports the following database versions:
 
 | Name     | Version |
 |:---------|:--------|
