fix spelling errors

--- a/backup.html.md.erb
+++ b/backup.html.md.erb
@@ -274,5 +274,5 @@ Keep your backup artifact safe by following these steps:
 
     This minimizes the risk of losing your backups in the event of a disaster.
 
-1. Each time you reploy Cloud Foundry, test your backup artifact 
+1. Each time you redeploy Cloud Foundry, test your backup artifact 
    by following the procedures in [Restoring with BOSH Backup and Restore](restore.html).
