--- a/external-blobstores.html.md.erb
+++ b/external-blobstores.html.md.erb
@@ -54,19 +54,18 @@ see the documentation for that storage provider to enable versioning.</p>
 
 ## <a id="enable-replication"></a> Enable Replication on Your External Blobstore
 
-BBR will **not** download your blobs to the backup artifact when performing a backup. Instead, it will take note of the _current version identifier_ of each one of your blobs, and store those in the artifact.
+BBR does not download your blobs to the backup artifact when performing a backup. Instead, BBR notes the _current version identifier_ of each blob and store those in the artifact.
 
-When restoring, BBR will revert your blobs to the original versions using the version identifiers stored in the artifact. This will only work **if the original bucket still exists**, as those versions are stored in the bucket, while the backup artifact only contains identifiers.
+When restoring, BBR reverts your blobs to the original versions using the version identifiers stored in the artifact. Since the backup artifact contains only identifiers, not blobs, BBR can only restore the blobs if the original bucket containing the blob versions still exists.
 
-If the bucket gets deleted, all its versions are deleted with it, and you will not be able to restore it. To prevent this from happening, you can set up [Cross-Region Replication](https://docs.aws.amazon.com/AmazonS3/latest/dev/crr.html) (see the [`put-bucket-replication` command](https://docs.aws.amazon.com/cli/latest/reference/s3api/put-bucket-replication.html) if you prefer to use the `aws` CLI).
+If the bucket is deleted, all its versions are deleted with it, and you cannot restore using it. To prevent this from happening, set up [Cross-Region Replication](https://docs.aws.amazon.com/AmazonS3/latest/dev/crr.html). See the [`put-bucket-replication` command](https://docs.aws.amazon.com/cli/latest/reference/s3api/put-bucket-replication.html) if you prefer to use the AWS CLI.
 
-Replication results in buckets that are identical to the original ones, including their version identifiers. This allows you to perform restores from the replicas, in case your original buckets are lost. For how to restore from a replica, see [Restore from Replicas](#restore-from-replicas) below.
+Replication results in buckets that are identical to the original ones, including their version identifiers. This allows you to perform restores from the replicas, in case your original buckets are lost. To restore from a replica, see [Restore from Replicas](#restore-from-replicas) below.
 
 ## <a id="enable-backup-and-restore"></a> Enable Backup and Restore of External Blobstores
 
 To back up a Cloud Foundry deployment that uses an external blobstore,
-you must colocate the `s3-versioned-blobstore-backup-restorer` job
-from [`backup-and-restore-sdk-release`](https://github.com/cloudfoundry-incubator/backup-and-restore-sdk-release/tree/master) as part of your deployment.
+you must colocate the `s3-versioned-blobstore-backup-restorer` job from [`backup-and-restore-sdk-release`](https://github.com/cloudfoundry-incubator/backup-and-restore-sdk-release/tree/master) as part of your deployment.
 
 This procedure describes how to do this if you are using ops files to customize your deployment:
 
