adds warning css [#154247886]

--- a/external-blobstores.html.md.erb
+++ b/external-blobstores.html.md.erb
@@ -3,6 +3,20 @@ title: Backup and Restore with External Blobstores
 owner: BBR
 ---
 
+.note.warning {
+  background-color: #fdd;
+  border-color: #fbb;
+  &:before {
+    content: "\F071";
+    font-family: FontAwesome;
+    color: #b9b781;
+    font-size: 1.2em;
+    left: 0.6em;
+    position: absolute;
+    top: 0.75em;
+  }
+}
+
 This topic describes how to configure an external blobstore so that it can be backed up
 and restored by BOSH Backup and Restore (BBR). 
 
