--- a/external-blobstores.html.md.erb
+++ b/external-blobstores.html.md.erb
@@ -3,6 +3,7 @@ title: Backup and Restore with External Blobstores
 owner: BBR
 ---
 
+<style>
 .note.warning {
   background-color: #fdd;
   border-color: #fbb;
@@ -16,6 +17,7 @@ owner: BBR
     top: 0.75em;
   }
 }
+</style>
 
 This topic describes how to configure an external blobstore so that it can be backed up
 and restored by BOSH Backup and Restore (BBR). 
