--- a/external-blobstores.html.md.erb
+++ b/external-blobstores.html.md.erb
@@ -61,7 +61,7 @@ Follow the instructions in the Amazon S3 documentation, [How Do I Enable or Susp
  
     This ensures that each file in your buckets has a valid version ID.
 
-3. After enabling versioning, for each object, you have a current version and zero or more non-current versions. 
+3. After enabling versioning, you have a current version and zero or more non-current versions for each object. 
 We recommend setting a retention policy on your buckets to delete old non-current versions and minimize storage costs. 
 See the <a href="https://docs.aws.amazon.com/AmazonS3/latest/dev/lifecycle-configuration-examples.html#lifecycle-config-conceptual-ex6">AWS documentation</a>.</p>
 
