--- a/external-blobstores.html.md.erb
+++ b/external-blobstores.html.md.erb
@@ -92,7 +92,7 @@ This procedure describes how to do this if you are using ops files to customize 
 
        <p class="note"><strong>Note</strong>: If your S3-compatible blobstore uses
          a custom CA certificate, please refer to the BOSH documentation on
-         [configuring trusted certificates](https://bosh.io/docs/trusted-certs.html).
+         <a href="https://bosh.io/docs/trusted-certs.html">configuring trusted certificates</a>.
          BBR will automatically make use of your configured trusted certificates.</p>
 
 2. Include the `enable-backup-restore-s3.yml` ops file in your deployment.
